extends MarginContainer
class_name ActionMenu


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.




# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass


func _on_attack_pressed() -> void:
	pass # Replace with function body.


func _on_skill_pressed() -> void:
	pass # Replace with function body.


func _on_defend_pressed() -> void:
	pass # Replace with function body.


func _on_move_pressed() -> void:
	pass # Replace with function body.


func _on_item_pressed() -> void:
	pass # Replace with function body.


func _on_flee_pressed() -> void:
	pass # Replace with function body.
